[package]
name = "screensnap"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.8"
custom_error = "1.6.0"
glium = "0.25.1"
easer = "0.2.1"

[target.'cfg(windows)'.dependencies]
winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3", features = ["winuser", "wingdi", "windef", "dwmapi"] }
